# fibe

./: .gitignore  LICENSE  Notes on weighted voting.txt  README.md  data_curation.py  fibe_function_backup.py  fibe_functions.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.cc/: LICENSE  README.md  cookiecutter.json  gen.py
.cc/docker/{{cookiecutter.project}}/: Dockerfile
.cc/docker/{{cookiecutter.project}}/scripts/: docker_build.sh  docker_push.sh
.cc/project/{{cookiecutter.project}}/: README.md  pyproject.toml
.cc/scripts/: docker_dev.sh  lint.sh  test.sh
.ipynb_checkpoints/: README-checkpoint.md  fibe_functions-checkpoint.py  fibe_training_only-checkpoint.py
fibe/: __init__.py  balance_data.py  fibe.py  fibe_functions.py  fibe_mlp.py  inference.py  inference_additional.py  loss_estimation.py  train.py  types.py
scripts/: init_dev.sh
tests/: test_balance_data.py  test_data_curation.py  test_fibe.py  test_inference.py  test_inference_additional.py  test_loss_estimation.py  test_train.py  test_types.py
